<resources>
    <string name="app_name">BetBtc</string>


    <string name="tab_home">首页</string>
    <string name="tab_data">数据</string>
    <string name="tab_bet_list">注单</string>
    <string name="tab_user">我的</string>
    <string name="network_error_and_late">网络异常，请稍后再试</string>
    <string name="parse_error_and_late">解析错误，请稍后再试</string>
    <string name="http_error_and_late">服务器错误，请稍后再试</string>
    <string name="timeout_and_late">请求超时，请稍后再试</string>
    <string name="unknow_error_and_late">未知错误，请稍后再试</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="dialog_title">温馨提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>

    <string name="btc2usdt">BTC/USDT</string>
    <string name="data_from_huobi">实时数据来自火币网</string>
    <string name="this_period_bet">本期投注</string>
    <string name="format_deathline">截止时间：%s</string>
    <string name="format_period">%s期</string>
    <string name="my_bet_list">我的注单</string>
    <string name="bet_times">下注次数</string>
    <string name="unit_usdt">USDT</string>
    <string name="compose_bet">组合投注</string>
    <string name="single_bet">单独投注</string>
    <string name="overage_">余额:</string>
    <string name="out_of_amount">超出最大额度</string>
    <string name="ensure_delete_this_bet">确定删除该注单</string>
    <string name="rise">涨</string>
    <string name="fall">跌</string>
    <string name="data_trend">数据走势</string>
    <string name="history_result">历史开奖</string>
    <string name="lottery_detail">开奖详情</string>
    <string name="this_period_detail">本期详情</string>

    <string name="share">分享</string>
    <string name="account_balance">账户余额</string>
    <string name="platom_award">平台奖励</string>
    <string name="recharge">充值</string>
    <string name="widthdraw">提币</string>
    <string name="balance_detail">收支明细</string>
    <string name="this_period_profit_">本期收益：</string>
    <string name="share_result">分享战绩</string>


    <string name="menu_recommend">推荐有礼</string>
    <string name="balance_details">收支明细</string>
    <string name="setting">设置</string>
    <string name="safe_center">安全中心</string>
    <string name="play_tutorial">玩法教程</string>
    <string name="common_help">常见帮助</string>
    <string name="relate_custom">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="recharge_coin_type">充值币种</string>
    <string name="copy">复制</string>
    <string name="withdraw_address">提币地址</string>
    <string name="pls_input_address">请输入提币地址</string>
    <string name="withdraw_amount">提币数量</string>
    <string name="min_withdraw_amount">最小提币数量10个</string>
    <string name="all">全部</string>
    <string name="format_availdable">可用: %s</string>
    <string name="format_today_left_draw_times">今日剩余提币次数: %s</string>
    <string name="format_arrive_account">到账数量：%sUSDT</string>
    <string name="scan_fail">解析失败</string>
    <string name="scan_pay">扫码</string>
    <string name="get_camera_permission">请先设置相机权限</string>
    <string name="pls_inside_code">将二维码放入框内即可扫描</string>
    <string name="scan_result">扫码结果</string>
    <string name="empty_notice">空空如也</string>
    <string name="person_info">个人资料</string>
    <string name="msg_notify">消息通知</string>
    <string name="real_name">实名认证</string>
    <string name="language">语言</string>
    <string name="balance_color">涨跌色</string>
    <string name="exit_logput">退出登录</string>

    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="birthday">生日</string>
    <string name="un_real_name">未实名</string>
    <string name="un_setting">未设置</string>
    <string name="get_pic_permission">请先设置相机和本地图片权限</string>
    <string name="change_login_pwd">修改登录密码</string>
    <string name="change_login_pwd_hint">定期修改登录密码，有利于账户安全</string>
    <string name="change_trade_pwd">修改交易密码</string>
    <string name="change_trade_pwd_hint">定期修改交易密码，保障资产安全</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="bind_email_hint">绑定邮箱，多一层保护验证</string>

    <string-array name="bet_type">
        <item>猜收盘价</item>
        <item>猜最高价</item>
        <item>猜最低价</item>
        <item>猜差价</item>
        <item>猜成交价</item>
    </string-array>
    <string-array name="data_nav">
        <item>分时</item>
        <item>1分钟</item>
        <item>5分钟</item>
        <item>15分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
    </string-array>
    <string-array name="huobi_period">
        <item>1min</item>
        <item>1min</item>
        <item>5min</item>
        <item>15min</item>
        <item>30min</item>
        <item>60min</item>
    </string-array>
    <string-array name="filter_real_deal">
        <item>全部</item>
        <item>收盘价</item>
        <item>最高价</item>
        <item>最低价</item>
        <item>差价</item>
        <item>平均成交价</item>
    </string-array>


    <string name="start_use">开始使用</string>
    <string name="onekey_login">一键登录</string>
    <string name="quick_login">快捷登录</string>
    <string name="unknown_number">未知手机号码</string>
    <string name="other_login_method">其他登录方式</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="code_login">验证码登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="pls_input_mobile">请输入手机号码</string>
    <string name="pls_input_code">请输入验证码</string>
    <string name="pls_input_pwd">请输入密码</string>
    <string name="get_code">获取验证码</string>
    <string name="reget_code">重新获取</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号码</string>
    <string name="has_account_and_login">已有账号？马上登录</string>
    <string name="next_step">下一步</string>

    <string name="reset_pwd">重置密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="pls_input_pwd_again">请再次输入密码</string>

    <string name="vertify_code">验证手机号</string>
    <string name="sms_code">短信验证码</string>
    <string name="default_country_code">+86</string>
    <string name="password_rule">密码为6~15位的数字字母组合</string>


</resources>
