<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/bg_user_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space50"
        android:layout_marginTop="@dimen/space150"
        android:layout_marginRight="@dimen/space50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_use"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textfont22"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space30"
                android:gravity="bottom"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:textSize="@dimen/textfont16"
                    android:textColor="@color/text_white"
                    android:text="@string/code_login" />

                <RadioButton
                    android:id="@+id/rbtn_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/textfont20"
                    android:button="@null"
                    android:textSize="@dimen/textfont14"
                    android:textColor="@color/text_white_light"
                    android:text="@string/pwd_login" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">

                <LinearLayout
                    android:id="@+id/lin_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/space10"
                    android:paddingRight="@dimen/space10">

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_country_code"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/textfont14"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/space1"
                    android:layout_height="@dimen/space20"
                    android:layout_gravity="center_vertical"
                    android:background="@color/bg_white" />

                <com.betbtc.app.view.ClearEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_close_white"
                    android:hint="@string/pls_input_mobile"
                    android:inputType="number"
                    android:lines="1"
                    android:paddingLeft="@dimen/space15"
                    android:paddingTop="@dimen/space10"
                    android:paddingBottom="@dimen/space10"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont14" />
            </LinearLayout>

            <View
                android:id="@+id/v_line1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/bg_white" />

            <LinearLayout
                android:id="@+id/lin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_code"
                    android:inputType="number"
                    android:lines="1"
                    android:paddingLeft="@dimen/space15"
                    android:paddingTop="@dimen/space10"
                    android:paddingBottom="@dimen/space10"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont14" />

                <TextView
                    android:id="@+id/tv_getcode"
                    android:layout_width="@dimen/space80"
                    android:layout_height="@dimen/space25"
                    android:gravity="center"
                    android:background="@drawable/bg_white_stroke"
                    android:lines="1"
                    android:padding="@dimen/space5"
                    android:text="@string/get_code"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont12" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lin_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">

                <com.betbtc.app.view.PasswordEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_pwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="@dimen/space15"
                    android:paddingTop="@dimen/space10"
                    android:paddingBottom="@dimen/space10"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont14" />
            </LinearLayout>

            <View
                android:id="@+id/v_line2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/bg_white" />

            <Button
                android:id="@+id/btb_login"
                style="@style/ViewClickStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space45"
                android:layout_marginTop="@dimen/space30"
                android:background="@drawable/bg_btn_normal"
                android:text="@string/login"
                android:textColor="@color/text_white"
                android:textSize="@dimen/textfont15" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont13"
                    android:text="@string/register_account"/>
                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont13"
                    android:text="@string/forget_pwd"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>