<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space15"
                android:background="@drawable/bg_white_block"
                android:elevation="@dimen/space3"
                android:orientation="vertical"
                android:padding="@dimen/space20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw_address"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/textfont13" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space5">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/pls_input_address"
                        android:lines="1"
                        android:ellipsize="end"
                        android:paddingTop="@dimen/space12"
                        android:paddingBottom="@dimen/space12"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/textfont13" />

                    <ImageView
                        android:id="@+id/tv_scan"
                        android:layout_width="@dimen/space30"
                        android:layout_height="@dimen/space30"
                        android:padding="@dimen/space5"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_scan" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divide_h_5"
                    android:background="@color/bg_divide" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space20"
                    android:text="@string/withdraw_amount"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/textfont13" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/space5">

                    <EditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/min_withdraw_amount"
                        android:lines="1"
                        android:ellipsize="end"
                        android:paddingTop="@dimen/space12"
                        android:paddingBottom="@dimen/space12"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/textfont13" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space10"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/textfont13"
                        android:text="@string/unit_usdt" />

                    <View
                        android:layout_width="@dimen/divide_h_1"
                        android:layout_height="@dimen/space20"
                        android:background="@color/bg_divide" />

                    <TextView
                        android:id="@+id/tv_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/space10"
                        android:textColor="@color/fall"
                        android:textSize="@dimen/textfont13"
                        android:textStyle="bold"
                        android:text="@string/all" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divide_h_5"
                    android:background="@color/bg_divide" />

                <TextView
                    android:id="@+id/tv_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/space10"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/textfont13"
                    android:text="@string/format_availdable" />

                <TextView
                    android:id="@+id/tv_left_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space30"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/textfont12"
                    android:textColor="@color/text_gray"
                    android:text="@string/format_today_left_draw_times" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_arrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:textColor="@color/text_black"
                android:textSize="@dimen/textfont14"
                android:textStyle="bold"
                android:text="@string/format_arrive_account" />

            <Button
                android:id="@+id/btn_withdraw"
                style="@style/ViewClickStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space45"
                android:layout_marginTop="@dimen/space30"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginRight="@dimen/space15"
                android:background="@drawable/bg_btn_normal"
                android:text="@string/widthdraw"
                android:textColor="@color/text_white"
                android:textSize="@dimen/textfont15" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginTop="@dimen/space20"
                android:textSize="@dimen/textfont13"
                android:textColor="@color/text_gray"
                android:text="说明提示：\n1.xxxxxxxxxxxxxxxxxxxxxxxx\n2.xxxxxxxxxxxxxxxxxxxxxxxxxx\n3.xxxxxxxxxxxxxxxxxxxxxxxx" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>