<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/bg_user_top"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space30"
        android:layout_marginTop="@dimen/space40"
        android:textSize="@dimen/textfont16"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:text="@string/cancel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space50"
        android:layout_marginTop="@dimen/space150"
        android:layout_marginRight="@dimen/space50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pwd"
            android:textColor="@color/text_white"
            android:textSize="@dimen/textfont22"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space30"
                android:text="@string/set_pwd"
                android:textColor="@color/text_white"
                android:textSize="@dimen/textfont16"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lin_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">

                <com.betbtc.app.view.PasswordEditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_pwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="@dimen/space15"
                    android:paddingTop="@dimen/space10"
                    android:paddingBottom="@dimen/space10"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont14" />
            </LinearLayout>

            <View
                android:id="@+id/v_line1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/bg_white" />

            <LinearLayout
                android:id="@+id/lin_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space20">

                <com.betbtc.app.view.PasswordEditText
                    android:id="@+id/et_pwd_again"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/pls_input_pwd_again"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="@dimen/space15"
                    android:paddingTop="@dimen/space10"
                    android:paddingBottom="@dimen/space10"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/textfont14" />
            </LinearLayout>

            <View
                android:id="@+id/v_line2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space1"
                android:background="@color/bg_white" />

            <Button
                android:id="@+id/btn_ensure"
                style="@style/ViewClickStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space45"
                android:layout_marginTop="@dimen/space30"
                android:background="@drawable/bg_btn_normal"
                android:text="@string/ensure"
                android:textColor="@color/text_white"
                android:textSize="@dimen/textfont15" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>